prod_snapshot_2015-09-24_1030/objects/Digital_Services__c.object
<CustomObject>
    <fields>
        <fullName>Affiliated_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affl Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Digital Services</relationshipLabel>
        <relationshipName>SponsoredDigitalServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avg_Cust_Val__c</fullName>
        <label>Avg Cust Val</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BestWhy__c</fullName>
        <label>BestWhy</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comp_1__c</fullName>
        <label>Comp 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_2__c</fullName>
        <label>Comp 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_3__c</fullName>
        <label>Comp 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Digital Services</relationshipLabel>
        <relationshipName>Digital_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Digital Services (Contact)</relationshipLabel>
        <relationshipName>Digital_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Curr_Adv__c</fullName>
        <label>Curr Adv</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Per-Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupons/Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Deals</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Custom_Website_Budget__c</fullName>
        <label>Custom Website Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Website_Description__c</fullName>
        <label>Custom Website Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dig_Aud_Req__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Audit Request</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Digital Services</relationshipLabel>
        <relationshipName>Digital_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ECommerce_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECommerce Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Count_Request_Notes__c</fullName>
        <label>Email Count Request Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Write_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Write Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>d_List_Products_Services__c</fullName>
        <label>List Products/Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_budgetrange__c</fullName>
        <label>Budget Range</label>
        <picklist>
            <picklistValues>
                <fullName>$500-$999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000-$1,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000-$4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>d_geogservarea__c</fullName>
        <inlineHelpText>Describe the Geographical Area to Which This Audit Applies</inlineHelpText>
        <label>Geog Serv Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>d_monthlypotsales__c</fullName>
        <label>Monthly Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>d_website__c</fullName>
        <description>Digital Audit Request Section - Website URL</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>d_win_1__c</fullName>
        <label>Win 1</label>
        <picklist>
            <picklistValues>
                <fullName>Coupon Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Fills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>d_win_2__c</fullName>
        <label>Win 2</label>
        <picklist>
            <picklistValues>
                <fullName>Coupon Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Fills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Digital Services</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Digital Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Services</pluralLabel>
    <recordTypes>
        <fullName>Digital_Audit</fullName>
        <active>true</active>
        <label>Digital Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Count</fullName>
        <active>true</active>
        <label>Email Count</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website_Audit</fullName>
        <active>true</active>
        <label>Website Audit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>